--- a/src/components/CardFounder.astro
+++ b/src/components/CardFounder.astro
@@ -83,12 +83,18 @@ const lang = getLangFromUrl(Astro.url);
         margin: 0;
         color: rgba(255, 255, 255, 0.7);
     }
+    html.dark .card h3 {
+        color: black;
+    }
 
     .card p {
         font-size: 1rem;
         font-weight: 400;
         margin-bottom: 1.875rem;
         color: rgba(255, 255, 255, 0.5);
+    }
+    html.dark .card p {
+        color: black;
     }
 
     .socials {
