--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -1,12 +1,49 @@
 :root {
+    // Colores base
+    --color-bright-gray-50: #f6f7f9;
+    --color-bright-gray-100: #ebedf3;
+    --color-bright-gray-500: #607497;
+    --color-bright-gray-700: #3e4b66;
+    --color-bright-gray-950: #202431;
+
+    --color-blue-100: #dbe9ff;
+    --color-blue-500: #4c6aff;
+    --color-blue-700: #202ee2;
+
     --accent: #2337ff;
-    --accent-dark: #000d8a;
-    --white: 230, 230, 230;
-    --black: 15, 18, 25;
+    --white: 230, 230, 230; /* Este color se usa en modo claro para el texto */
+    --black: 15, 18, 25; /* Este color se usa en modo oscuro para el texto */
+
+    // Colores de grises
     --gray: 96, 115, 159;
     --gray-light: 229, 233, 240;
     --gray-dark: 34, 41, 57;
+
+    // Colores de texto
+    --text-color: rgb(var(--white));
+
+    --primary-color: var(--color-blue-500); // Azul principal
+
+    --secondary-color: var(--color-bright-gray-500); // Gris brillante principal
+
+    // Colores de fondo
+    --background-color: var(--color-bright-gray-50);
+
+    // Colores de grises
+    --gray-color: rgb(var(--gray)); // Gris base
+    --gray-color-light: rgb(var(--gray-light)); // Gris claro
+    --gray-color-dark: rgb(var(--gray-dark)); // Gris oscuro
+
+    // Gradientes y sombras
     --gray-gradient: rgba(var(--gray-light), 50%), #fff;
     --box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
         0 16px 32px rgba(var(--gray), 33%);
+}
+
+.dark {
+    --text-color: rgb(var(--black));
+    --primary-color: var(--color-blue-700); // Azul oscuro
+    --secondary-color: var(--color-bright-gray-700); // Gris brillante oscuro
+    --accent: #000d8a;
+    --background-color: var(--color-bright-gray-950); // Fondo oscuro
 }
