--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import CardProyect from "../../components/CardProyect.astro";
+import ProjectsGrid from "../../components/ProjectsGrid.astro";
 import { SITE_DESCRIPTION } from "../../consts";
 import { useTranslations, getLangFromUrl } from "../../i18n/translate";
-import ServicesGrid from "../../components/ServicesGrid.astro";
+
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
@@ -17,24 +17,10 @@ const t = useTranslations(lang);
             </h1>
             <p set:html={t("index.description")} />
             <p set:html={t("index.about")} />
-            <h3>{t("index.offer")}</h3>
-            <ServicesGrid />
             <p>
                 {t("index.cta")}
             </p>
-            <h2>{t("projects.title")}</h2>
-            <CardProyect
-                name="FullLite"
-                description={t("projects.description1")}
-                image="/projects/animal.svg"
-                link="https://full-lite.vercel.app/"
-            />
-            <CardProyect
-                name="HexaDevs"
-                description={t("projects.description2")}
-                image="/projects/hexadevs.png"
-                link="https://hexadevs.crobf.tech/"
-            />
+            <ProjectsGrid />
         </div>
     </main>
 </Layout>
